--- a/Docker-Demos/sampleapp/package.json
+++ b/Docker-Demos/sampleapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mongodbapp",
+  "name": "sampleapp",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -22,25 +22,9 @@
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
-    "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/swagger": "^11.0.6",
-    "@nestjs/throttler": "^6.4.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.200.0",
-    "@opentelemetry/instrumentation-http": "^0.200.0",
-    "@opentelemetry/instrumentation-nestjs-core": "^0.46.0",
-    "@opentelemetry/resources": "^2.0.0",
-    "@opentelemetry/sdk-node": "^0.200.0",
-    "@opentelemetry/semantic-conventions": "^1.32.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "dotenv": "^16.4.7",
-    "ioredis": "^5.6.1",
-    "mongodbapp": "file:",
-    "mongoose": "^8.12.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.1"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
